# backend/docs/swagger.json
@@ -88,7 +88,7 @@
                 }
             }
         },
-        "/propostas": {
+        "/trocas": {
             "post": {
                 "description": "Registra uma proposta de troca com base nos dados enviados",
                 "consumes": [
@@ -98,7 +98,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "propostas"
+                    "trocas"
                 ],
                 "summary": "Cadastra nova proposta",
                 "parameters": [
@@ -134,14 +134,14 @@
                 }
             }
         },
-        "/propostas/{id}": {
+        "/trocas/{id}/historico": {
             "get": {
                 "description": "Retorna propostas enviadas ou recebidas por um usuário com base no tipo e status",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "propostas"
+                    "trocas"
                 ],
                 "summary": "Lista propostas do usuário",
                 "parameters": [
